# yadro

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  random.py  users.py
backend/app/core/: __init__.py  cache.py  config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/db/crud/: __init__.py  users.py
backend/app/db/models/: __init__.py  base.py  user.py
backend/app/lifecycle/: lifespan_events.py
backend/app/middleware/: setup.py
backend/app/monitoring/: prometheus.py
backend/app/schemas/: __init__.py  user.py
backend/app/services/: __init__.py  api_client.py  user_service.py
backend/http/: random.http  users.http
backend/migrations/: env.py
backend/migrations/versions/: 0c2f5ad7073e_init.py  5497c1df7cd4_init.py
backend/monitoring/: loki-config.yaml  prometheus.yml  promtail-config.yaml
backend/monitoring/grafana/: Backend-1748120578231.json  Backend-dashboard.json  grafana.ini
backend/monitoring/grafana/custom_metrics/: custom_pg_queries.yaml
backend/monitoring/grafana/dashboards/: Backend-dashboard.json  K8s_Node_Metrics.json  (+6 more)
backend/tests/: conftest.py  locustfile.py  test_random.py  test_users.py
backend/tests/integration/: test_session.py  test_users.py
backend/tests/load/: locustfile.py
backend/tests/unit/: test_config.py  test_lifecycle.py
backend/tests/utils/: mocks.py
(+11 files in other folders)
