[tool.poetry]
name = "randomuser"
version = "0.1.0"
description = "A FastAPI application for managing random users"
authors = ["Neizvestnyj"]
license = "MIT"
# readme = "../README.md"

packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.39"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"
httpx = "^0.28.1"
alembic = "^1.14.1"
slowapi = "^0.1.9"
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
tenacity = "^9.0.0"
aiofiles = "^24.1.0"
pydantic = { extras = ["email"], version = "^2.11.5" }
prometheus-fastapi-instrumentator = "^7.1.0"
psycopg2 = "^2.9.10"
redis = "^6.1.0"
black = "^25.1.0"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
respx = "^0.22.0"
ruff = "^0.11.10"
gevent = "^24.11.1"
pytest-cov = "^5.0.0"
coveralls = { version = "^4.0.1", markers = "python_version < '3.13'" }
locust = "^2.37.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
concurrency = ["thread", "gevent"]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 120
target-version = ['py311']  # Python 3.11, как в ruff.toml
